--- a/src/components/DropMenu/index.module.scss
+++ b/src/components/DropMenu/index.module.scss
@@ -5,7 +5,7 @@
   gap: 20px;
   background: $shared;
   position: absolute;
-  max-width: 400px;
+  min-width: 300px;
   max-height: 423px;
   left: 75px;
   top: 90px;
