--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,9 @@
 @use 'reset-css';
 
+body {
+      background: rgb(23, 23, 23);
+}
+
 .container {
       max-width: 1140px;
       padding: 0 15px;
